cmake_minimum_required(VERSION 3.18)

# 1.create a Project
set(PROJECT_NAME "C_learn")
PROJECT(${PROJECT_NAME})
# set(PROJECT_BINARY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/build/bin)
# 2. add subdirectory and include directory
# add_subdirectory(${PROJECT_SOURCE_DIR}/${PROJECT_SRC_PATH})
# add_subdirectory(${PROJECT_SOURCE_DIR}/${PROJECT_SRC_PATH})
# add_subdirectory(${PROJECT_SOURCE_DIR}/${PROJECT_SRC_PATH})
add_subdirectory(${PROJECT_SOURCE_DIR}/C_002)
# add_subdirectory(${PROJECT_SOURCE_DIR}/ODE_solvers_in_C)
